fixed social media icon spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -350,7 +350,7 @@ body {
 
   .social {
     font-size: 2.5vw;
-    margin-right: 20px;
+    margin-right: 1.5vw;
     margin-top: 5px;
   }
 
